# elasticdl

./: CMakeLists.txt  WORKSPACE
elasticdl/: Makefile
elasticdl/cc/common/: BUILD  embedding_table.cc  embedding_table.h  embedding_table_test.cc  tensor.h  type.h
elasticdl/cc/kernel/: BUILD  sgd.cc  sgd.h  sgd_test.cc
elasticdl/cc/optimizer/: BUILD  sgd.cc  sgd.h  sgd_test.cc
elasticdl/cc/ps/: BUILD  optimizer.cc  optimizer.h  optimizer_test.cc  parameter.cc  parameter.h  parameter_test.cc
elasticdl/cpp/common/: CMakeLists.txt  tensor.cc  tensor_test.cc
elasticdl/proto/: elasticdl.proto  tensor_shape.proto
elasticdl_client/: api.py  args.py  client.py  image_builder.py  k8s_client.py
